--- a/index.html
+++ b/index.html
@@ -13,4 +13,15 @@
     <li>Nothing going on (yet)</li>
   </ul>
 </body>
+
+<h2>Navigation</h2>
+<ul>
+  <li style="color: #F90">
+    <a href="orange.html">The Orange Page</a>
+  </li>
+  <li style="color: #00F">
+    <a href="blue.html">The Blue Page</a>
+  </li>
+</ul>
+
 </html>
