--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
   <li style="color: #00F">
     <a href="blue.html">The Blue Page</a>
   </li>
+  <li style="color: #C00">
+    <a href="red.html">The Red Page</a>
+  </li>
+  <li style="color: #FF0">
+    <a href="yellow.html">The Yellow Page</a>
+  </li>
   <li>
     <a href="rainbow.html">The Rainbow Page</a>
   </li>
