--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <li style="color: #00F">
     <a href="blue.html">The Blue Page</a>
   </li>
+  <li style="color: #F0F">
+    <a href="pink.html">The Pink Page</a>
+  </li>
   <li style="color: #C00">
     <a href="red.html">The Red Page</a>
   </li>
