--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   <h1 style="color: #07F">A Colorful Website</h1>
   <p>This is a website about color!</p>    
 
-  <h2 style="color: #C00">News</h2>
+<h2 style="color: #C00">News</h2>
   <ul>
     <li><a href="news-1.html">Blue Is The New Hue</a></li>
     <li><a href="rainbow.html">Our New Rainbow</a></li>
+    <li><a href="news-2.html">A Red Rebellion</a></li>
+    <li><a href="news-3.html">Middle East's Silent Beast</a></li>
+    <li><a href="news-4.html">Indigo Invasion</a></li>
   </ul>
-
 <h2>Navigation</h2>
+
 <ul>
   <li>
     <a href="about/index.html">About Us</a>
