--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <li>
     <a href="about/index.html">About Us</a>
   </li>
+  <li>
+    <a href="dummy.html">The Dummy Page</a>
+  </li>
   <li style="color: #F90">
     <a href="orange.html">The Orange Page</a>
   </li>
