Deleted all files.

--- a/index.html
+++ b/index.html
@@ -1,57 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">  <!-- Always include the lang attribute. -->
 <head>
+  <!-- viewport ensures proper display on desktops, tablets, phones. -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">  <!-- Always include the charset attribute. -->
   <title>A Colorful Website</title>
-  <link rel="stylesheet" href="style.css" />
-  <meta charset="utf-8" />
+
 </head>
 <body>
   <h1 style="color: #07F">A Colorful Website</h1>
   <p>This is a website about color!</p>    
-
-<h2 style="color: #C00">News</h2>
-  <ul>
-    <li><a href="news-1.html">Blue Is The New Hue</a></li>
-    <li><a href="rainbow.html">Our New Rainbow</a></li>
-    <li><a href="news-2.html">A Red Rebellion</a></li>
-    <li><a href="news-3.html">Middle East's Silent Beast</a></li>
-    <li><a href="news-4.html">Indigo Invasion</a></li>
-  </ul>
-<h2>Navigation</h2>
-
-<ul>
-  <li>
-    <a href="about/index.html">About Us</a>
-  </li>
-  <li>
-    <a href="dummy.html">The Dummy Page</a>
-  </li>
-  <li style="color: #F90">
-    <a href="orange.html">The Orange Page</a>
-  </li>
-  <li style="color: #00F">
-    <a href="blue.html">The Blue Page</a>
-  </li>
-  <li style="color: #F0F">
-    <a href="pink.html">The Pink Page</a>
-  </li>
-  <li style="color: #C00">
-    <a href="red.html">The Red Page</a>
-  </li>
-  <li style="color: #FF0">
-    <a href="yellow.html">The Yellow Page</a>
-  </li>
-  <li>
-    <a href="rainbow.html">The Rainbow Page</a>
-  </li>
-</ul>
-
+  
   <h2 style="color: #C00">News</h2>
   <ul>
-    <li><a href="news-1.html">Blue Is The New Hue</a></li>
-    <li><a href="rainbow.html">Our New Rainbow</a></li>
-    <li><a href="news-2.html">A Red Rebellion</a></li>
-    <li><a href="news-3.html">Middle East's Silent Beast</a></li>
+    <li>Nothing going on (yet)</li>
   </ul>
-
+</body>
 </html>
