--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">  <!-- Always include the charset attribute. -->
   <title>A Colorful Website</title>
-
+  <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8" />
 </head>
 <body>
   <h1 style="color: #07F">A Colorful Website</h1>
