--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
   <li style="color: #FF0">
     <a href="yellow.html">The Yellow Page</a>
   </li>
+  <li style="color: #0C0">
+    <a href="green.html">The Green Page</a>
+  </li>
 </ul>
 
 </body>
